update que 3 answer

--- a/titanic_survival_exploration.ipynb
+++ b/titanic_survival_exploration.ipynb
@@ -875,7 +875,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "**Answer**: Predictions have an accuracy of 80.81%.\n"
+    "**Answer**: \n",
+    "First I look at Class and Sibsp for male to identitfy survival case. After this I found that I could not get further better result in male data set by investagting any feactures . So I start investiage Pclass in female data set.\n",
+    "\n",
+    "For male, \n",
+    "I use age <16, SibSp>4 to split out did not survive for male case\n",
+    "I use age <2, SibSp > 3 to split out survival case for male\n",
+    "I also use age < 16 and Pclass < 3 to split out survival cases for male\n",
+    "\n",
+    "For female I use age > 38 and pclass > 2 to split out did not survival cases for female \n",
+    "\n",
+    "\n",
+    "Predictions have an accuracy of 80.81%.\n"
    ]
   },
   {
@@ -919,21 +930,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 2",
    "language": "python",
-   "name": "python3"
+   "name": "python2"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 2
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "pygments_lexer": "ipython2",
+   "version": "2.7.15"
   }
  },
  "nbformat": 4,
